[package]
name = "evil-json"
version = "0.1.0"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
description = "Experimental JSON serializer"
homepage = "https://github.com/Kogia-sima/evil-json"
repository = "https://github.com/Kogia-sima/evil-json"
keywords = ["serde", "json"]
readme = "README.md"
license = "MIT-0"
edition = "2018"

[workspace]
members = [
  "evil-json-bench"
]

[features]
default = ["std"]
# no_std environment is not supported now. Do not disable this feature flag
std = []

[dependencies]
itoap = "0.1.5"
ryu = "1.0.5"
serde = "1.0.123"

[build-dependencies]
version_check = "0.9.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
