[package]
name = "evil-json-bench"
version = "0.1.0"
authors = ["Kogia-sima <orcinus4627@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "0.4.7"
serde = "1.0.123"
serde_derive = "1.0.123"
simd-json-derive = "0.1.15"

[dev-dependencies]
criterion = "0.3.4"
evil-json = { path = ".." }
serde_json = "1.0.62"
simd-json = "0.3.24"

[[bench]]
name = "all"
harness = false
